# Business-Management-System

./: .env.example  .gitignore  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_baseline.py  0002_users.py  0003_teams_tasks_ratings.py  0004_meetings.py
backend/app/: main.py
backend/app/admin/: setup.py
backend/app/auth/: __init__.py  dependencies.py  models.py  router.py  schemas.py  security.py  service.py
backend/app/core/: broker.py  config.py  logging.py  middleware.py  redis_client.py
backend/app/db/: base.py  engine.py  session.py
backend/app/health/: router.py
backend/app/meetings/: __init__.py  dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/metrics/: setup.py
backend/app/ratings/: models.py  router.py  schemas.py  service.py
backend/app/realtime/: listener.py  manager.py  publisher.py  router.py  schemas.py
backend/app/tasks/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/app/teams/: dependencies.py  models.py  router.py  schemas.py  service.py
backend/tests/: conftest.py  test_broker.py  test_db_config.py  test_health.py  test_metrics.py  test_migrations.py  test_phase3_models.py  test_phase3_wiring.py  verify_users_schema.py
backend/tests/auth/: __init__.py  conftest.py  test_admin.py  test_auth.py
backend/tests/meetings/: __init__.py  test_router.py  test_schemas.py  test_service.py
backend/tests/ratings/: test_service.py
backend/tests/realtime/: conftest.py  test_gauge.py  test_integration.py  test_listener.py  test_manager.py  test_ws_auth.py
backend/tests/tasks/: test_router.py  test_service.py
backend/tests/teams/: test_router.py  test_service.py
